plataforma/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nubeultima
  labels:
    proyecto: nubeultima
